<resources>
    <string name="app_name">TranslatePlayer</string>

    <string name="fragment_settings_label">Settings</string>
    <string name="fragment_choice_words_label">Choose Words</string>
    <string name="fragment_choice_media_label">Choose Media</string>
    <string name="fragment_choice_destination_label">Choose Destination</string>
    <string name="fragment_statistics_label">Statistics</string>
    <string name="fragment_video_player_label">Player</string>

    <string name="item_export_words_title">Export words</string>
    <string name="app_description">Watch and Learn</string>

    <!-- Statistics -->
    <string name="statistics_words_title">Words</string>
    <string name="statistics_words_total_title">Translated</string>
    <string name="statistics_words_total_summary">%s words were translated</string>
    <string name="statistics_words_total_key">statistics_words_total_key</string>
    <string name="statistics_words_total_default_value">0</string>
    <string name="statistics_words_exported_title">Exported</string>
    <string name="statistics_words_exported_summary">%s words were exported</string>
    <string name="statistics_words_exported_key">statistics_words_exported_key</string>
    <string name="statistics_words_exported_default_value">0</string>

    <string name="statistics_media_title">Media</string>
    <string name="statistics_media_total_title">Opened</string>
    <string name="statistics_media_total_summary">You opened %s media</string>
    <string name="statistics_media_total_key">statistics_media_total_key</string>
    <string name="statistics_media_total_default_value">0</string>
    <string name="statistics_media_time_title">Time spent</string>
    <string name="statistics_media_time_summary">You spent %s for learning</string>
    <string name="statistics_media_time_key">statistics_media_time_key</string>
    <string name="statistics_media_time_default_value">0</string>
    <!-- Settings -->
    <string name="settings_subtitles_title">Subtitles</string>
    <string name="settings_subtitles_transparency_title">Background transparency</string>
    <string name="settings_subtitles_transparency_summary">%s of transparency</string>
    <string name="settings_subtitles_transparency_key">settings_subtitles_transparency_key</string>
    <string name="settings_subtitles_transparency_default_value">0</string>
    <string name="settings_subtitles_bottom_margin_title">Bottom margin</string>
    <string name="settings_subtitles_bottom_margin_summary">%s pt</string>
    <string name="settings_subtitles_bottom_margin_key">settings_subtitles_bottom_margin_key</string>
    <string name="settings_subtitles_bottom_margin_default_value">0</string>

    <string name="settings_media_title">Media</string>
    <string name="settings_media_pause_title">Pause if hovered</string>
    <string name="settings_media_pause_summary">%s</string>
    <string name="settings_media_pause_key">settings_media_pause_key</string>
    <string name="settings_media_pause_default_value">0</string>
    <string name="settings_media_audio_shift_title">Audio shift</string>
    <string name="settings_media_audio_shift_summary">%s second</string>
    <string name="settings_media_audio_shift_key">settings_media_audio_shift_key</string>
    <string name="settings_media_audio_shift_default_value">0</string>

</resources>