<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:title="@string/settings_subtitles_title"
        app:iconSpaceReserved="false">
        <SeekBarPreference
            android:defaultValue="@string/settings_subtitles_transparency_default_value"
            android:key="@string/settings_subtitles_transparency_key"
            android:max="100"
            android:title="@string/settings_subtitles_transparency_title"
            app:iconSpaceReserved="false" />
        <EditTextPreference
            android:defaultValue="@string/settings_subtitles_bottom_margin_default_value"
            android:key="@string/settings_subtitles_bottom_margin_key"
            android:title="@string/settings_subtitles_bottom_margin_title"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/settings_media_title"
        app:iconSpaceReserved="false">
        <SwitchPreferenceCompat
            android:defaultValue="@string/settings_media_pause_default_value"
            android:key="@string/settings_media_pause_key"
            android:title="@string/settings_media_pause_title"
            app:iconSpaceReserved="false" />
        <EditTextPreference
            android:defaultValue="@string/settings_media_audio_shift_default_value"
            android:key="@string/settings_media_audio_shift_key"
            android:title="@string/settings_media_audio_shift_title"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
</PreferenceScreen>